[gd_scene load_steps=23 format=3 uid="uid://blf0sco11lwii"]

[ext_resource type="PackedScene" uid="uid://c48boue3byrbp" path="res://tool_tip.tscn" id="1_joxnx"]
[ext_resource type="Script" path="res://sellable.gd" id="1_l1rdu"]
[ext_resource type="Texture2D" uid="uid://cfyt8lnv01f1k" path="res://assets/key.png" id="2_c3nxd"]
[ext_resource type="Texture2D" uid="uid://bvfv8ivj2khm" path="res://assets/pricetags.png" id="4_rh2r4"]
[ext_resource type="Texture2D" uid="uid://6rrdl1a3ryql" path="res://assets/smoke.png" id="5_f7axy"]
[ext_resource type="Texture2D" uid="uid://ceu3ujeryx0f3" path="res://assets/restock.png" id="6_sehw5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oxkyj"]
radius = 11.0
height = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qy2qa"]
atlas = ExtResource("4_rh2r4")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sose"]
atlas = ExtResource("4_rh2r4")
region = Rect2(0, 48, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbah0"]
atlas = ExtResource("4_rh2r4")
region = Rect2(0, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy050"]
atlas = ExtResource("4_rh2r4")
region = Rect2(0, 32, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7gy7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy2qa")
}],
"loop": false,
"name": &"1",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sose")
}],
"loop": true,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbah0")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy050")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_24428"]
atlas = ExtResource("5_f7axy")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4h3i"]
atlas = ExtResource("5_f7axy")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgx4"]
atlas = ExtResource("5_f7axy")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_adn1d"]
atlas = ExtResource("5_f7axy")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcq1s"]
atlas = ExtResource("5_f7axy")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olw0m"]
atlas = ExtResource("5_f7axy")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw6k3"]
atlas = ExtResource("5_f7axy")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx56q"]
atlas = ExtResource("5_f7axy")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6drn"]
atlas = ExtResource("5_f7axy")
region = Rect2(512, 576, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tr1by"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24428")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4h3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adn1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcq1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olw0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw6k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx56q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6drn")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[node name="sellable" type="Node2D"]
texture_filter = 1
position = Vector2(0, -6)
script = ExtResource("1_l1rdu")
texture = ExtResource("2_c3nxd")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ToolTip" parent="." instance=ExtResource("1_joxnx")]
offset_left = 11.0
offset_top = -12.0
offset_right = 11.0
offset_bottom = -12.0
metadata/_edit_use_anchors_ = true

[node name="SellableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SellableArea"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_oxkyj")

[node name="PriceTag2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7.10543e-15, 12)
scale = Vector2(0.296875, 0.296875)
sprite_frames = SubResource("SpriteFrames_n7gy7")
animation = &"1"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.328125, 0.328125)
sprite_frames = SubResource("SpriteFrames_tr1by")
frame = 8
frame_progress = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0

[node name="Restock" type="Sprite2D" parent="."]
position = Vector2(7, 10)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_sehw5")
